--- a/pom.xml
+++ b/pom.xml
@@ -84,13 +84,12 @@
 		
 		<!-- provided dependencies -->
 
-	   <dependencies>
-          <dependency>
-                    <groupId>javax.servlet</groupId>
-                    <artifactId>javax.servlet-api</artifactId>
-                    <version>3.1.0</version>
-             </dependency>
-           </dependencies>	
+	   <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+      <scope>provided</scope>
+    </dependency>
 		
 		
 	</dependencies>
